package dat.backend.model.exceptions;

public class SmokeStopCalculatorException extends Exception {
    public SmokeStopCalculatorException(String message) {
        super(message);
    }
}
